# DocChat

./: .gitignore  CODE_WALKTHROUGH.md  Dockerfile.api  Dockerfile.frontend  PODCASTS_GUIDE_ZH.md  README.md  docker-compose.yml  pyproject.toml  railway.json  run_api.py
api/: auth.py  chat_service.py  deps.py  main.py  models.py  podcast_service.py  sources_service.py
api/routers/: auth.py  chat.py  config.py  notebooks.py  notes.py  podcasts.py  search.py  sessions.py  sources.py
core/: exceptions.py
core/ai/: provision.py
core/database/: migrate.py  repository.py
core/domain/: base.py  notebook.py  podcast.py  user.py
core/graphs/: chat.py
core/utils/: chunking.py  embedding.py
frontend/: Dockerfile  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  ThemeProvider.tsx  globals.css  main.tsx
frontend/src/app/: ThemeProvider.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/podcasts/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: CitationPopover.tsx  Markdown.tsx  MarkdownWithCitations.tsx  ThemeToggle.tsx  ThinkingIndicator.tsx
frontend/src/lib/: api.ts  store.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  NotebookDetailPage.tsx  PodcastsPage.tsx  SearchPage.tsx  SettingsPage.tsx  SourceDetailPage.tsx
migrations/: 001_initial.surql  002_chat_messages.surql  003_user_config.surql
tests/: conftest.py  test_base.py  test_migrate.py  test_notebook.py  test_podcast.py  test_repository.py  test_user.py
(+5 files in other folders)
